--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ baseurl: /
 # Site settings
 title: Clyde Technology
 email: contact@clydetechnology.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Clyde Technology"
 
 
 # Team names, titles and social links
