--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ baseurl: /
 # Site settings
 title: Clyde Technology
 email: contact@clydetechnology.com
-description: "Clyde Technology"
+description: "Clyde Technology are cyber security specialists providing services to businesses to help keep their systems secure."
 
 
 # Team names, titles and social links
